Adiciona funcionalidade de redefinição de senha nos endpoints de /auth
